Correct alignment of footer
The display flex on the root div was causing text and elements to be laid out without and spaces, since they were being treated as flex items.

```page-footer: "This page is built with ❤️ and [Quarto](https://quarto.org/) and another [link](google.com) and a word."```

was breaking it

--- a/src/resources/projects/website/navigation/quarto-nav.scss
+++ b/src/resources/projects/website/navigation/quarto-nav.scss
@@ -654,8 +654,10 @@ body:not(.floating) .nav-footer {
   min-height: 3em;
   width: 100%;
   position: absolute;
-  display: flex;
-  justify-content: center;
+  text-align: center;
+  .footer-items {
+    justify-content: center;
+  }
 }
 
 .nav-footer-right {
